* Initial Jakarta EE 10 Conversion on Java 11.